terraform/gcp-artic-lab/gke-nginx/k8s/nginx-monitoring/prometheus.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus-server
  namespace: nginx-ingress
  labels:
    app.kubernetes.io/name: prometheus
    app.kubernetes.io/part-of: nginx-ingress

spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: prometheus
      app.kubernetes.io/part-of: nginx-ingress
  template:
    metadata:
      labels:
        app.kubernetes.io/name: prometheus
        app.kubernetes.io/part-of: nginx-ingress
    spec:
      serviceAccountName: prometheus-server
      containers:
        - name: prometheus
          image: prom/prometheus:v2.3.2
          args:
            - "--config.file=/etc/prometheus/prometheus.yml"
            - "--storage.tsdb.path=/prometheus/"
          ports:
            - containerPort: 9090
          volumeMounts:
            - name: prometheus-config-volume
              mountPath: /etc/prometheus/
            - name: prometheus-storage-volume
              mountPath: /prometheus/
      volumes:
        - name: prometheus-config-volume
          configMap:
            name: prometheus-configuration
        - name: prometheus-storage-volume
          emptyDir: {}

---
apiVersion: v1
kind: Service
metadata:
  name: prometheus-server
  namespace: nginx-ingress
  labels:
    app.kubernetes.io/name: prometheus
    app.kubernetes.io/part-of: nginx-ingress

spec:
  selector:
    app.kubernetes.io/name: prometheus
    app.kubernetes.io/part-of: nginx-ingress
  type: ClusterIP
  ports:
    - port: 9090
      targetPort: 9090
