terraform/gcp-artic-lab/gke-nginx/k8s/nginx-monitoring/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ngnix-monitoring
  namespace: nginx-ingress
  labels:
    app.kubernetes.io/name: nginx-monitoring
    app.kubernetes.io/part-of: nginx-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/tls-acme: "true"
spec:
  tls:
  - hosts:
      - grafana.gke-nginx.arctic-lab.mattandes.com
    secretName: grafana-tls-cert
  - hosts:
      - prometheus.gke-nginx.arctic-lab.mattandes.com
    secretName: prometheus-tls-cert
  rules:
  - host: grafana.gke-nginx.arctic-lab.mattandes.com
    http:
      paths:
      - path: /
        backend:
          serviceName: grafana
          servicePort: 3000
  - host: prometheus.gke-nginx.arctic-lab.mattandes.com
    http:
      paths:
      - path: /
        backend:
          serviceName: prometheus-server
          servicePort: 9090
